# N.E.K.O

./: .cursorrules  .gitignore  README.MD  RELEASE_NOTES.md  STABLE_VERSION_SUMMARY.md  agent_server.py  frp_manager.py  lan_proxy.py  launcher.py  main_server.py  package-lock.json  pyproject.toml  start_with_proxy.sh
.github/workflows/: build-desktop.yml
brain/: browser_use_adapter.py  computer_use.py  task_executor.py
config/: __init__.py  api_providers.json  prompts_sys.py
docs/: README.md
docs/architecture/: task-hud-system.md
docs/frontend/: CHECKLIST-type-import-fix.md  FIX-type-import-from-common-2026-01-10.md  README.md  REFACTOR-tinyemitter-extraction-2026-01-10.md  REPORT-type-import-fix-2026-01-10.md  SUMMARY-audio-service-error-fix.md  (+15 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.dev.config.ts  vite.web.config.ts  vitest.config.ts  vitest.setup.ts
main_logic/: agent_event_bus.py  core.py  cross_server.py  omni_offline_client.py  omni_realtime_client.py  tts_client.py
main_routers/: __init__.py  agent_router.py  characters_router.py  config_router.py  cookies_login_router.py  ip_qrcode_router.py  live2d_router.py  memory_router.py  music_router.py  pages_router.py  system_router.py  vrm_router.py  websocket_router.py  workshop_router.py
memory/: recent.py  settings.py
plugin/: __init__.py  export_frontend.bat  export_frontend.sh  logging_config.py  settings.py  user_plugin_server.py  zeromq_ipc.py
plugin/plugins/moltbot_bridge/: README.md  __init__.py  plugin.toml  pyproject.toml
plugin/plugins/testPlugin/: __init__.py  plugin.toml  pyproject.toml
specs/: launcher.spec
static/: app-agent.js  app-audio-capture.js  app-audio-playback.js  app-buttons.js  app-character.js  app-chat.js  app-interpage.js  app-proactive.js  app-screen.js  app-settings.js  app-state.js  app-ui.js  app-websocket.js  app.js  avatar-popup-common.js  common-ui-hud.js  common_ui.js  live2d-core.js  live2d-interaction.js  live2d-model.js  live2d-ui-buttons.js  live2d-ui-drag.js  live2d-ui-popup.js  music_ui.js  universal-tutorial-manager.js  vrm-cursor-follow.js  vrm-interaction.js  vrm-manager.js  vrm-ui-buttons.js  vrm-ui-popup.js
templates/: api_key_settings.html  chara_manager.html  cookies_login.html  index.html  live2d_emotion_manager.html  live2d_parameter_editor.html  memory_browser.html  model_manager.html  steam_workshop_manager.html  viewer.html  voice_clone.html  vrm_emotion_manager.html
utils/: aiohttp_proxy_utils.py  config_manager.py  cookies_login.py  file_utils.py  language_utils.py  music_crawlers.py  preferences.py  screenshot_utils.py  ssl_env_diagnostics.py  web_scraper.py
(+473 files in other folders)
